# quants

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json  sync-config.yaml
.claude/agents/: ai-research-article-fetcher.md  ca-claim-extractor.md  ca-pattern-verifier.md  ca-report-generator.md  competitive-advantage-critique.md  news-article-fetcher.md  pr-quant.md  weekly-report-lead.md  weekly-report-news-aggregator.md  weekly-report-publisher.md  wr-data-aggregator.md  wr-news-aggregator.md  wr-report-publisher.md
.claude/commands/: config-sync.md  dr-industry.md  dr-stock.md  emit-graph-queue.md  generate-market-report.md  kg-enrich-auto.md  kg-quality-check.md  md2docx.md  plan-worktrees.md  project-discuss.md  run-ca-strategy-full.md  run-ca-strategy-sample.md  save-to-graph.md  site-investigator.md  sync-claude-config.md  sync-nas.md
.claude/rules/: neo4j-namespace-convention.md  subagent-data-passing.md
.claude/templates/: weekly-report-issue.md
.gemini/: settings.json
.github/workflows/: ci.yml
MAS4InvestmentTeam/: 2026-02-23_simple-poc-status.md
MAS4InvestmentTeam/fund-proposal/: 00_index.md  01_competitive-advantage.md  02_investor-story.md  03_counter-arguments.md  04_core-value.md  05_process-proof-framework.md  05a_judgment-quality-metrics.md  05b_expert-feedback-loop.md  05c_academic-frameworks.md  06_open-questions.md  06a_moat-strategy.md
MAS4InvestmentTeam/memo/: 2026-02-16_backtesting-guide-lookahead-bias-elimination.md  2026-02-16_masfin-5-stage-pipeline-process.md  2026-02-16_multi-agent-fund-design.md  2026-02-16_multi-agent-investment-system-report.md  2026-02-16_three-tier-screening-design.md  2026-02-18_mas-fund-value-proposition.md  2026-02-20_milize-mtg.md  2026-02-25_memo_analyst-kb-mas-integration.md
MAS4InvestmentTeam/plan/: 2026-02-16_mas-investment-team-poc-design.md  2026-02-25_analyst-kb-mas-integration.md
analyst/: README.md
analyst/Competitive_Advantage/: ca-eval-poc-overview-for-analyst-y.docx  ca-eval-poc-overview-for-analyst-y.md
analyst/archived/: dify_comparison.md  dify_design_discussion.md  dify_workflow_design.md
analyst/design/: workflow_design.md
analyst/memo/: 2026-02-06_session1-discussion-log.md  2026-03-17_AN-Feedback.md  2026-03-17_discussion-and-next-actions.md  2026-03-17_feedback-cycle-problem.md
analyst/plan/: 2026-02-06_session1-initial-plan.md  2026-02-09_ai-investment-team-master.md
data/Transcript/: list_port_and_index_price_2015_2026.csv  list_port_mcap_2015_2026.json
data/config/: finance-news-filter.json  finance-news-themes.json  fred_series.json  industry-research-presets.json  knowledge-graph-schema.yaml  neo4j-constraints.cypher  news-collection-config.yaml  news_search_keywords.yaml  rss-presets.json  yfinance_tickers.json
data/duckdb/: _sync_state.json  edinet.duckdb
data/exports/: workflow-result-2026-02-27T08-39-02.json  workflow-result-2026-02-27T08-39-20.json  workflow-result-2026-02-27T08-50-55.json  workflow-result-2026-02-27T08-50-56.json  workflow-result-2026-02-27T08-51-17.json  workflow-result-2026-03-17T12-20-29.json  workflow-result-2026-03-17T12-20-48.json
docs/: knowledge-graph.md
docs/plan/: 2026-02-22_analyst-directory-restructure.md  2026-02-22_ca-strategy-agent-based-llm.md  2026-02-23_ca-strategy-batch-parallel.md  2026-02-23_quants-finance-migration.md  2026-02-24_ca-strategy-phase6-implementation-plan.json  2026-02-25_backtest-engine-design-plan.md  2026-02-25_backtest-engine-design.md  2026-02-25_backtest-library-architecture-research.md  2026-03-02_gemini-embedding-integration.md  2026-03-02_generate-market-report-script-mismatch.md  2026-03-06_bse-module-design.md  2026-03-06_edinet-api-alignment.md  2026-03-06_review-enhancement-plan.md  2026-03-17_discussion-oos-planning.md  2026-03-17_discussion-project-status.md  2026-03-18_discussion-asean-data-sources.md  2026-03-18_discussion-edinet-db-status.md  2026-03-18_discussion-edinet-sync-fix.md  2026-03-18_discussion-project-overview.md  2026-03-18_nas-tailscale-setup.md  2026-03-19_arxiv-author-citation-pipeline.md  2026-03-19_discussion-arxiv-pipeline.md  2026-03-19_discussion-kg-ai-investment-expansion.md  2026-03-19_discussion-kg-quality-backfill.md  2026-03-19_discussion-kg-quality-improvement.md  2026-03-19_discussion-kg-v2-implementation.md  2026-03-19_discussion-kg-v2-schema.md  2026-03-19_discussion-neo4j-quality-cleanup.md  2026-03-19_discussion-progress-snapshot.md  2026-03-19_discussion-quant-kg-barriers.md  2026-03-19_discussion-quant-kg-population.md  2026-03-19_discussion-research-integration.md  2026-03-19_discussion-session-summary.md  2026-03-19_jsai2026-kg-import.md  2026-03-21_discussion-edinet-schema-optimization.md  2026-03-21_discussion-kg-paper-enrichment.md  2026-03-21_discussion-kg-paper-quality.md  2026-03-21_discussion-kg-quality-check.md  2026-03-21_discussion-polymarket-api-research.md  2026-03-21_discussion-polymarket-merge.md  (+35 more)
docs/pr-review/: pr-review-20260223-173000.yaml  pr-review-20260224-171409.yaml  pr-review-20260302-000000.yaml  pr-review-20260302-130338.yaml  pr-review-20260306-041500.yaml  pr-review-20260306-prj72.yaml  pr-review-20260307-round2.yaml
docs/project/: package-refactoring.md
docs/research_stocks/: memo_20260310.md
notebook/: ca_strategy_buyhold_analysis.ipynb  ca_strategy_buyhold_analysis.py  ca_strategy_phase6_analysis.py  ca_strategy_us_only_analysis.py
research/: ai_kg_investment_strategy_research.md  quant_factor_investing_papers.md
scripts/: check_circular_deps.py  collect-news.sh  collect_finance_news.py  collect_finance_news_ai.py  collect_finance_news_index.py  collect_finance_news_macro.py  collect_finance_news_sector.py  collect_finance_news_stock.py  collect_weekly_report_data.py  convert_notebooks.py  emit_graph_queue.py  migrate_author_ids.py  prepare_ai_research_session.py  prepare_news_session.py  reorganize_project_files.sh  setup.sh  start-neo4j.sh  sync_nas.sh  validate_neo4j_schema.py
src/academic/: __init__.py  (+9 more)
(+3337 files in other folders)
