[project]
name = "finance"
version = "0.1.0"
description = "金融市場分析・コンテンツ発信支援ライブラリ"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "structlog>=25.4.0",
    "rich>=13.7.0",
    "filelock>=3.20.3",
    "urllib3>=2.6.3",
    # 市場データ取得
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    # データベース
    "duckdb>=1.0.0",
    # データ分析・可視化
    "pandas>=2.0.0,<4.0.0",  # pandas 3.0は型互換性の問題があるため2.xに固定
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    # テキスト処理
    "jinja2>=3.1.0",
    "tenacity>=9.1.2",
    "scipy>=1.17.0",
    "kaleido>=1.2.0",
    "httpx>=0.28.1",
    "feedparser>=6.0.12",
    "fastmcp>=2.14.3",
    "ipykernel>=7.1.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "marimo>=0.19.4",
    "nbformat>=5.10.4",
    "seaborn>=0.13.2",
    "lxml>=6.0.2",
    "protobuf>=6.33.5",
    "pretty-errors",
    "trafilatura>=2.0.0",
    "anthropic>=0.76.0",
    "tqdm>=4.67.2",
    # SEC EDGAR
    "edgartools>=3.0.0",
    "tiktoken>=0.7.0",
    "pymupdf>=1.26.7",
    "cssselect>=1.4.0",
    "werkzeug>=3.1.6",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=5.1.0",
    "pytest-httpserver>=1.1.3",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.150.2",
    "pyright>=1.1.403",
    "ruff>=0.14.11",
    "pre-commit>=4.5.1",
    "bandit>=1.7.0",
    "pip-audit>=2.10.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
]

# rss optional dependencies
scheduler = ["apscheduler>=3.10.0"]
mcp = [
    "mcp>=1.0.0",
]
cli = [
    "click>=8.1.0",
]

# playwright optional dependencies (for JS-rendered page extraction)
playwright = [
    "playwright>=1.49.0,<2.0.0",
]

# automation optional dependencies
automation = [
    "claude-agent-sdk>=0.1.22",
    "anyio>=4.0.0",
]
market = [
    "openpyxl>=3.1.5",
]

# analyze optional dependencies (Kalman filter for beta estimation)
kalman = [
    "pykalman>=0.9.7",
]

[project.scripts]
rss-mcp = "rss.mcp.server:main"
rss-cli = "rss.cli.main:cli"
collect-finance-news = "automation.news_collector:main"
notebooklm-mcp = "notebooklm.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyze", "src/database", "src/edgar", "src/market", "src/rss", "src/factor", "src/strategy", "src/automation", "src/news", "src/utils_core", "src/notebooklm"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
    ".venv",
    "notebook_sample",
    "src_sample",
    "notebook",
]

[tool.ruff.lint]
exclude = [
    ".venv",
    "src/*/docs/.steering",
    "src/*/sample/",   # レガシーコード
]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
]
ignore = [
    "E501",
    "F401",  # Allow unused imports (not auto-removed on save)
    "B007",
    "B008",
    "C401",
    "C408",
    "F821",
    "TC002",  # Allow runtime imports used for both types and values
    "F841",
    "G004",
    "T201",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "PTH123",
    "PERF203",
    "PERF401",
    "PLW0603",
    "PLC0206",
    "PLC2401",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "SIM108",
    "PLC0415",
]

[tool.pyright]
include = ["src", "tests", ".claude/agents"]
exclude = [".venv", "**/__pycache__", "build", "dist", "tests/skills/finance_news_workflow", "src/**/sample"]
extraPaths = [".claude/agents"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"  # 最小サポートバージョン（3.12以上に対応）
pythonPlatform = "All"
typeCheckingMode = "basic"

# Type checking behavior
strictParameterNoneValue = false

# 重要なエラー（必ずエラーとして報告）
reportMissingImports = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportUnusedCoroutine = "error"
reportMatchNotExhaustive = "error"
reportUnusedImport = "none"  # Allow unused imports
reportDuplicateImport = "error"

# 開発時に役立つ警告レベル
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportInconsistentConstructor = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

# 開発を妨げない程度に無効化
reportCallIssue = "none"
reportAttributeAccessIssue = "none"
reportMissingTypeStubs = "none"
reportMissingSuperCall = "none"
reportPrivateUsage = "none"
reportPrivateImportUsage = "none"
reportImplicitStringConcatenation = "none"
reportInvalidStubStatement = "none"
reportIncompleteStub = "none"
reportUnsupportedDunderAll = "none"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311", "B404", "B603", "B607", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Ensure src/ packages are importable in CI
python_files = ["test_*.py", "*_test.py"]
# finance_news_workflow/unit tests reference non-existent finance_news_collector module
norecursedirs = ["tests/skills/finance_news_workflow/unit", "tests/market/unit/bloomberg", "tests/market/property/bloomberg"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "playwright: marks tests as requiring playwright (deselect with '-m \"not playwright\"')",
]

[tool.uv.workspace]
members = [
    "src/utils_core",
]

[dependency-groups]
dev = [
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.22",
    "filelock>=3.20.3",
    "hypothesis>=6.150.2",
    "marimo>=0.19.2",
    "pip>=26.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.403",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpserver>=1.1.3",
    "ruff>=0.14.11",
    "virtualenv>=20.36.1",
]
